// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-layout Example (index) layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter limiter--wide"
  >
    <div
      className="flex-parent-mm"
    >
      <div
        className="flex-child flex-child--no-shrink w-full w180-mm w240-ml mr36-mm undefined"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <a
                  className="txt-fancy txt-l block color-blue-on-hover"
                  href="/dr-ui/"
                >
                  dr-ui
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="h36 relative"
              >
                <div>
                  <div>
                    <button
                      className="flex-parent flex-parent--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round w-full"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <span
                        className="mr6 color-gray"
                      >
                        <svg
                          className="icon w18 h18"
                        >
                          <use
                            xlinkHref="#icon-search"
                          />
                        </svg>
                      </span>
                       
                      <span
                        className="color-gray"
                      >
                        Search
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <nav
              className="mx-neg12"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75 flex-parent flex-parent--space-between-main"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Overview
                    </a>
                    <button
                      aria-controls="menu-overview"
                      aria-expanded={false}
                      aria-label="Toggle Overview menu"
                      className="flex-child flex-child--no-shrink color-blue-on-hover px12 px0-mm"
                      onClick={[Function]}
                    >
                      <svg
                        className="events-none icon inline-block align-t"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/specification/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Specification
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75 bg-blue-faint color-blue"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/examples/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Examples
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/demo/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Demo
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child flex-child--grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              dr-ui
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Examples
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col prose"
          >
            <h1
              className="txt-fancy"
            >
              Examples
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="dr-ui--page-layout-aside col col--12 col--4-mxl"
            >
              <aside
                className="scroll-auto-mxl scroll-styled viewport-almost-mxl sticky-mxl"
                data-swiftype-index="false"
                style={
                  Object {
                    "top": "10px",
                  }
                }
              >
                <div
                  className="mb18 mb0-mxl"
                >
                  <h2
                    className="unprose txt-m txt-bold mb6"
                  >
                    Filters
                  </h2>
                  <div
                    className="grid grid--gut6"
                  >
                    <div
                      className="col col--6 col--4-ml col--12-mxl mb6"
                    >
                      <div
                        className="relative "
                      >
                        <div>
                          <label
                            className="inline-block txt-s txt-bold color-darken75"
                            htmlFor="search"
                          >
                            Search
                             
                          </label>
                        </div>
                        <input
                          aria-required={true}
                          className="input input--s relative wmax180"
                          data-test="search-input"
                          id="search"
                          name="search"
                          onChange={[Function]}
                          placeholder="Search title and description…"
                          style={
                            Object {
                              "top": "2px",
                            }
                          }
                          type="text"
                          value=""
                        />
                        <div
                          role="alert"
                        />
                      </div>
                    </div>
                    <div
                      className="col col--6 col--4-ml col--12-mxl mb6"
                    >
                      <div
                        className="relative "
                      >
                        <div>
                          <label
                            className="inline-block txt-s txt-bold color-darken75 w70"
                            htmlFor="topic"
                          >
                            Topics
                             
                          </label>
                        </div>
                        <div
                          className="select-container "
                        >
                          <select
                            aria-required={true}
                            className="select select select--s"
                            data-test="topic-select"
                            disabled={false}
                            id="topic"
                            onChange={[Function]}
                            value=""
                          >
                            <option
                              value=""
                            >
                              All topics
                            </option>
                            <option
                              value="Cool"
                            >
                              Cool
                            </option>
                            <option
                              value="Awesome"
                            >
                              Awesome
                            </option>
                          </select>
                          <div
                            className="select-arrow"
                          />
                        </div>
                        <div
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </aside>
            </div>
            <div
              className="col prose"
            >
              <div>
                <div
                  className="grid grid--gut36"
                >
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-1/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Display a map
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Initialize a map in an HTML element with Mapbox GL JS.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-2/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Add a default marker
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Add a default Marker to the map.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-3/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Extrude polygons for 3D indoor mapping
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Create a 3D indoor map with the fill-extrude-height paint property.
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Example page layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter limiter--wide"
  >
    <div
      className="flex-parent-mm"
    >
      <div
        className="flex-child flex-child--no-shrink w-full w180-mm w240-ml mr36-mm undefined"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <a
                  className="txt-fancy txt-l block color-blue-on-hover"
                  href="/dr-ui/"
                >
                  dr-ui
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="h36 relative"
              >
                <div>
                  <div>
                    <button
                      className="flex-parent flex-parent--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round w-full"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <span
                        className="mr6 color-gray"
                      >
                        <svg
                          className="icon w18 h18"
                        >
                          <use
                            xlinkHref="#icon-search"
                          />
                        </svg>
                      </span>
                       
                      <span
                        className="color-gray"
                      >
                        Search
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <nav
              className="mx-neg12"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75 flex-parent flex-parent--space-between-main"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Overview
                    </a>
                    <button
                      aria-controls="menu-overview"
                      aria-expanded={false}
                      aria-label="Toggle Overview menu"
                      className="flex-child flex-child--no-shrink color-blue-on-hover px12 px0-mm"
                      onClick={[Function]}
                    >
                      <svg
                        className="events-none icon inline-block align-t"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/specification/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Specification
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75 bg-blue-faint color-blue"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/examples/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Examples
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/demo/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Demo
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child flex-child--grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="/dr-ui/"
            >
              dr-ui
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/PageLayout/examples/"
            >
              Examples
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            An example
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col prose col--8-mxl col--12"
          >
            <h1
              className="txt-fancy"
            >
              An example
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="dr-ui--page-layout-aside col col--12 col--4-mxl"
            >
              <aside
                className="scroll-auto-mxl scroll-styled viewport-almost-mxl sticky-mxl"
                data-swiftype-index="false"
                style={
                  Object {
                    "top": "10px",
                  }
                }
              >
                <div
                  className="none block-mxl"
                >
                  <div
                    className="dr-ui--feedback"
                  >
                    <div>
                      <h2
                        className="unprose txt-m txt-bold mb6"
                      >
                        Was this 
                        example
                         helpful?
                      </h2>
                      <button
                        className="btn btn--s"
                        id="dr-ui--feedback-page-yes"
                        onClick={[Function]}
                      >
                        Yes
                      </button>
                      <button
                        className="btn btn--s ml6"
                        id="dr-ui--feedback-page-no"
                        onClick={[Function]}
                      >
                        No
                      </button>
                    </div>
                  </div>
                </div>
              </aside>
            </div>
            <div
              className="col col--8-mxl col--12 prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36 block none-mxl"
              >
                <div
                  className="dr-ui--feedback"
                >
                  <div>
                    <h2
                      className="unprose txt-m txt-bold mb6"
                    >
                      Was this 
                      example
                       helpful?
                    </h2>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout No sidebar, show Breadcrumbs on mobile renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter limiter--wide"
  >
    <div
      className="flex-parent-mm"
    >
      <div
        className="flex-child flex-child--grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              Dr. UI
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Overview
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="col prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36"
              >
                <div
                  className="dr-ui--feedback"
                >
                  <div>
                    <h2
                      className="unprose txt-m txt-bold mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </h2>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Page layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter limiter--wide"
  >
    <div
      className="flex-parent-mm"
    >
      <div
        className="flex-child flex-child--no-shrink w-full w180-mm w240-ml mr36-mm "
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <a
                  className="txt-fancy txt-l block color-blue-on-hover"
                  href="/dr-ui/"
                >
                  dr-ui
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="h36 relative"
              >
                <div>
                  <div>
                    <button
                      className="flex-parent flex-parent--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round w-full"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <span
                        className="mr6 color-gray"
                      >
                        <svg
                          className="icon w18 h18"
                        >
                          <use
                            xlinkHref="#icon-search"
                          />
                        </svg>
                      </span>
                       
                      <span
                        className="color-gray"
                      >
                        Search
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <nav
              className="mx-neg12"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75 bg-blue-faint color-blue flex-parent flex-parent--space-between-main"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Overview
                    </a>
                    <button
                      aria-controls="menu-overview"
                      aria-expanded={false}
                      aria-label="Toggle Overview menu"
                      className="flex-child flex-child--no-shrink color-blue-on-hover px12 px0-mm"
                      onClick={[Function]}
                    >
                      <svg
                        className="events-none icon inline-block align-t"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/specification/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Specification
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/examples/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Examples
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/demo/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Demo
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child flex-child--grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              dr-ui
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Overview
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col prose col--8-mxl col--12"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="dr-ui--page-layout-aside col col--12 col--4-mxl"
            >
              <aside
                className="scroll-auto-mxl scroll-styled viewport-almost-mxl sticky-mxl"
                data-swiftype-index="false"
                style={
                  Object {
                    "top": "10px",
                  }
                }
              >
                <nav
                  aria-labelledby="on-this-page"
                  className="dr-ui--on-this-page mb36-mxl mb18"
                >
                  <h2
                    className="unprose txt-m txt-bold mb6"
                    id="on-this-page"
                  >
                    On this page
                  </h2>
                  <ul
                    className=""
                  >
                    <li
                      className="mb3 mb6-mxl"
                    >
                      <a
                        className="link inline-block link--gray"
                        href="#section-1"
                        style={
                          Object {
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        Section 1
                      </a>
                    </li>
                    <li
                      className="mb3 mb6-mxl"
                    >
                      <a
                        className="link inline-block link--gray"
                        href="#section-2"
                        style={
                          Object {
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        Section 2
                      </a>
                    </li>
                  </ul>
                </nav>
                <div
                  className="none block-mxl"
                >
                  <div
                    className="dr-ui--feedback"
                  >
                    <div>
                      <h2
                        className="unprose txt-m txt-bold mb6"
                      >
                        Was this 
                        page
                         helpful?
                      </h2>
                      <button
                        className="btn btn--s"
                        id="dr-ui--feedback-page-yes"
                        onClick={[Function]}
                      >
                        Yes
                      </button>
                      <button
                        className="btn btn--s ml6"
                        id="dr-ui--feedback-page-no"
                        onClick={[Function]}
                      >
                        No
                      </button>
                    </div>
                  </div>
                </div>
              </aside>
            </div>
            <div
              className="col col--8-mxl col--12 prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="section-1"
              >
                Section 1
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="section-2"
              >
                Section 2
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36 block none-mxl"
              >
                <div
                  className="dr-ui--feedback"
                >
                  <div>
                    <h2
                      className="unprose txt-m txt-bold mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </h2>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout full layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter limiter--wide"
  >
    <div
      className="flex-parent-mm"
    >
      <div
        className="flex-child flex-child--no-shrink w-full w180-mm w240-ml mr36-mm undefined"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <div
                  className="ml-neg3"
                >
                  <div
                    className="inline-block"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                  >
                    <div
                      aria-describedby="tooltip-1"
                      className="txt-bold round inline-block cursor-default txt-xs px6"
                      style={
                        Object {
                          "background": "#f1f3fd",
                          "borderColor": "#0428c8",
                          "color": "#0c248d",
                        }
                      }
                    >
                      Beta
                    </div>
                    <div
                      className="hide-visually"
                      id="tooltip-1"
                      role="tooltip"
                    >
                      <div
                        className="txt-s wmax120"
                      >
                        This feature is in public beta and is subject to changes.
                      </div>
                    </div>
                  </div>
                </div>
                <a
                  className="txt-fancy txt-l block color-blue-on-hover"
                  href="/dr-ui/"
                >
                  Mapbox Tiling Service
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="h36 relative"
              >
                <div>
                  <div>
                    <button
                      className="flex-parent flex-parent--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round w-full"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <span
                        className="mr6 color-gray"
                      >
                        <svg
                          className="icon w18 h18"
                        >
                          <use
                            xlinkHref="#icon-search"
                          />
                        </svg>
                      </span>
                       
                      <span
                        className="color-gray"
                      >
                        Search
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="none block-mm"
          >
            <nav
              className="mx-neg12"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex-parent txt-uppercase txt-fancy round-full w-full color-darken75 bg-blue-faint color-blue"
                  >
                    <a
                      className="flex-child flex-child--grow  color-blue-on-hover py6 py3-mm"
                      href="/PageLayout/"
                      style={
                        Object {
                          "letterSpacing": "0.025em",
                        }
                      }
                    >
                      Overview
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child flex-child--grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://mapbox.github.io/dr-ui/"
            >
              Documentation
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              Mapbox Tiling Service
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Overview
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="col prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="section-1"
              >
                Section 1
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="section-2"
              >
                Section 2
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36"
              >
                <div
                  className="dr-ui--feedback"
                >
                  <div>
                    <h2
                      className="unprose txt-m txt-bold mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </h2>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;
